--- a/webui/index.html
+++ b/webui/index.html
@@ -109,6 +109,7 @@
     <!-- Preload additional Alpine stores -->
     <script type="module" src="/components/settings/image-gen/image-gen-store.js"></script>
     <script type="module" src="/components/users/users-dashboard-store.js"></script>
+    <script type="module" src="/components/settings/users/user-management-store.js"></script>
 
     <script src="vendor/ace-min/ace.js"></script>
     <link href="vendor/ace-min/ace.min.css" rel="stylesheet">
